adapted to jdk 1.8