@@ -3,6 +3,7 @@ package com.fillumina.collections;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -28,14 +29,14 @@ import org.junit.jupiter.api.Test;
  *
  * @author Francesco Illuminati <fillumina@gmail.com>
  */
-public class TableMapTest {    
-    
+public class TableMapTest {
+
     @Test
     public void shouldMaskAsModuleForPowerOfTwoValues() {
         assertEquals(51 % 64, 51 & (64 - 1));
         assertEquals(73 % 32, 73 & (32 - 1));
     }
-    
+
     @Test
     public void shouldSelectTheNextPowerOfTwo() {
         assertEquals(0, AbstractEntryMap.nextPowerOf2(0));
@@ -49,104 +50,104 @@ public class TableMapTest {
         assertEquals(16, AbstractEntryMap.nextPowerOf2(9));
         assertEquals(16, AbstractEntryMap.nextPowerOf2(12));
     }
-    
+
     @Test
     public void shouldBeEmptyAtStart() {
         TableMap<String,String> map = new TableMap<>();
-        
+
         assertTrue(map.isEmpty());
     }
-    
+
     @Test
     public void shouldPutAnElement() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "one");
-        
+
         assertFalse(map.isEmpty());
     }
-    
+
     @Test
     public void shouldGetAnElement() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "one");
-        
+
         assertEquals("one", map.get("1"));
     }
-    
+
     @Test
     public void shouldContainsEntry() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "one");
-        
+
         assertTrue(map.containsEntry("1", "one"));
         assertFalse(map.containsEntry("1", "other"));
     }
-    
+
     @Test
     public void shouldIncrementSize() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "one");
-        
+
         assertEquals(1, map.size());
     }
-    
+
     @Test
     public void shouldNotBeEmptyAfterPut() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "one");
-        
+
         assertFalse(map.isEmpty());
     }
-    
+
     @Test
     public void shouldRemoveAnElement() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "one");
         map.remove("1");
-        
+
         assertTrue(map.isEmpty());
     }
-    
+
     @Test
     public void shouldInsertManyElements() {
         TableMap<String,String> map = new TableMap<>();
-        
+
         for (int i=0; i<20; i++) {
             String value = "" + i;
             map.put(value, value);
             assertEquals(i + 1, map.size());
         }
-        
+
         assertEquals(20, map.size());
-        
+
         for (int i=0; i<20; i++) {
             assertTrue(map.containsKey("" + i));
         }
     }
-    
+
     @Test
     public void shouldRemoveManyElements() {
         TableMap<String,String> map = new TableMap<>();
-        
+
         for (int i=0; i<20; i++) {
             String value = "" + i;
             map.put(value, value);
         }
-        
+
         assertEquals(20, map.size());
-        
+
         for (int i=0; i<20; i++) {
             assertEquals("" + i, map.remove("" + i));
             assertEquals(19 - i, map.size());
         }
-        
+
         assertTrue(map.isEmpty());
     }
-    
+
     static class MyEntry extends SimpleEntry<String,String> {
 
         private final String check;
-        
+
         public MyEntry(String key, String value, String check) {
             super(key, value);
             this.check = check;
@@ -156,22 +157,22 @@ public class TableMapTest {
             return check;
         }
     }
-    
+
     @Test
     public void shouldSetValueOnSameKey() {
         TableMap<String,String> map = new TableMap<>();
         MyEntry entry = new MyEntry("1", "one", "mine");
         map.putEntry(entry);
         map.put("1", "uno");
-        
+
         MyEntry myEntry = (MyEntry) map.getEntry("1");
         assertEquals("mine", myEntry.getCheck());
     }
-    
+
     static class MyReadOnlyEntry extends SimpleImmutableEntry<String,String> {
 
         private final String check;
-        
+
         public MyReadOnlyEntry(String key, String value, String check) {
             super(key, value);
             this.check = check;
@@ -181,133 +182,133 @@ public class TableMapTest {
             return check;
         }
     }
-    
+
     @Test
     public void shouldNotSetValueOnSameKeyForReadOnlyEntry() {
         TableMap<String,String> map = new TableMap<>();
-        SimpleImmutableEntry<String,String> entry = 
+        SimpleImmutableEntry<String,String> entry =
                 new SimpleImmutableEntry<>("1", "one");
-        
+
         assertThrows(UnsupportedOperationException.class, () -> {
             entry.setValue("uno");
         });
-        
+
         map.putEntry(entry);
         map.put("1", "uno");
-        
+
         Entry<String,String> newEntry = map.getEntry("1");
         assertNotEquals(entry, newEntry);
     }
-    
+
     @Test
     public void shouldIterate() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "a");
         map.put("2", "b");
         map.put("3", "c");
-        
+
         Iterator<Entry<String,String>> it = map.entrySet().iterator();
         List<String> values = new ArrayList<>();
         while (it.hasNext()) {
             Entry<String,String> e = it.next();
             values.add(e.getValue());
         }
-        
+
         assertEquals(3, values.size());
         assertTrue(values.contains("a"));
         assertTrue(values.contains("b"));
         assertTrue(values.contains("c"));
     }
-    
+
     @Test
     public void shouldRemoveFirstItemIterator() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "a");
         map.put("2", "b");
         map.put("3", "c");
-        
+
         Iterator<Entry<String,String>> it = map.entrySet().iterator();
         Entry<String, String> first = it.next();
         assertNotNull(first);
-        
+
         it.remove();
-        
+
         assertFalse(map.containsKey(first.getKey()));
-        
+
         assertEquals(2, map.size());
-        
-        List<String> expected = new ArrayList<>(List.of("1", "2", "3"));
+
+        List<String> expected = new ArrayList<>(Arrays.asList("1", "2", "3"));
         expected.remove(first.getKey());
 
         List<String> keys = map.entrySet().stream()
                 .map(e -> e.getKey())
                 .collect(Collectors.toList());
-        
+
         assertTrue(keys.containsAll(expected));
     }
-    
+
     @Test
     public void shouldRemoveMiddleItemIterator() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "a");
         map.put("2", "b");
         map.put("3", "c");
-        
+
         Iterator<Entry<String,String>> it = map.entrySet().iterator();
         assertNotNull(it.next());
         Entry<String, String> middle = it.next();
         assertNotNull(middle);
-        
+
         it.remove();
-        
+
         assertFalse(map.containsKey(middle.getKey()));
         assertEquals(2, map.size());
     }
-    
+
     @Test
     public void shouldRemoveLastItemIterator() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "a");
         map.put("2", "b");
         map.put("3", "c");
-        
+
         Iterator<Entry<String,String>> it = map.entrySet().iterator();
         assertNotNull(it.next());
         assertNotNull(it.next());
         Entry<String, String> last = it.next();
         assertNotNull(last);
-        
+
         Exception exception = assertThrows(
                 NoSuchElementException.class, () -> it.next() );
-        
+
         it.remove();
-        
+
         assertFalse(map.containsKey(last.getKey()));
         assertEquals(2, map.size());
     }
-    
+
     @Test
     public void shouldThrowExceptionIfIteratingPastLastItem() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "a");
         map.put("2", "b");
         map.put("3", "c");
-        
+
         Iterator<Entry<String,String>> it = map.entrySet().iterator();
         assertNotNull(it.next());
         assertNotNull(it.next());
         assertNotNull(it.next());
-        
+
         Exception exception = assertThrows(
                 NoSuchElementException.class, () -> it.next() );
     }
-    
+
     @Test
     public void shouldInsertSameElementTwice() {
         TableMap<String,String> map = new TableMap<>();
         assertNull(map.put("1", "a"));
         assertEquals(1, map.size());
-        
+
         assertEquals("a", map.put("1", "a"));
         assertEquals(1, map.size());
     }
@@ -347,45 +348,45 @@ public class TableMapTest {
             return value;
         }
     }
-    
+
     @Test
     public void shouldManageHashClashing() {
         TableMap<SameHash,String> map = new TableMap<>();
-        
+
         SameHash one = new SameHash("one");
         SameHash two = new SameHash("two");
 
         assertEquals(one.hashCode(), two.hashCode());
-        
+
         map.put(one, "one");
         map.put(two, "two");
-        
+
         assertEquals("one", map.get(one));
         assertEquals("two", map.get(two));
-        
+
         map.remove(two);
         assertNull(map.get(two));
-        
+
         map.remove(one);
         assertNull(map.get(one));
-        
+
         assertTrue(map.isEmpty());
     }
-    
+
     @Test
     public void shouldIterateOverEntriesWithForEach() {
         TableMap<String,String> map = new TableMap<>();
         map.put("1", "a");
         map.put("2", "b");
         map.put("3", "c");
-        
+
         List<String> keys = new ArrayList<>();
         map.forEach(e -> keys.add(e.getKey()));
-        
+
         assertTrue(map.keySet().containsAll(keys));
         assertTrue(keys.containsAll(map.keySet()));
     }
-    
+
     @Test
     public void shouldAcceptManyValues() {
         TableMap<String,Integer> map = new TableMap<>();
@@ -398,11 +399,11 @@ public class TableMapTest {
             assertEquals(i, map.get(s));
         }
     }
-    
+
     @Test
     public void shouldAcceptManyRandomValues() {
         TableMap<String,Integer> map = new TableMap<>();
-        
+
         // create array
         int[] indexes = new int[1000];
         IntStream.range(0, 1000).forEach(i -> indexes[i] = i);
@@ -416,23 +417,23 @@ public class TableMapTest {
             indexes[x] = indexes[y];
             indexes[y] = t;
         }
-        
+
         // set the elements randomly
         for (int i=0; i<1000; i++) {
             int x = indexes[i];
             String s = "" + x;
             map.put(s, x);
         }
-        
+
         // reads the elements
         for (int i=0; i<1000; i++) {
             String s = "" + i;
             assertEquals(i, map.get(s));
         }
-        
+
         assertEquals(1000, map.size());
     }
-    
+
     @Test
     public void shouldAcceptAndRemoveRandomValues() {
         List<Integer> list = new ArrayList<>(1000);
@@ -447,13 +448,13 @@ public class TableMapTest {
             set.add(ThreadLocalRandom.current().nextInt(1000));
         }
         set.forEach( i -> assertNotNull(map.remove("" + i), "" + i) );
-        
+
         list.removeAll(set);
         Collections.shuffle(list);
         list.forEach( i -> assertEquals(i, map.get("" + i)));
         assertEquals(900, map.size());
     }
-    
+
     @Test
     public void shouldGetOrCreate() {
         TableMap<Integer,String> map = new TableMap<>();
